# ur5_tasks

./: CMakeLists.txt  README.md  package.xml  task2_architecture
config/: params.yaml
include/ur5_tasks/: task2.h
launch/: task1.launch  task2.launch
src/: task1.py  task2.cpp  task2_1.cpp  task2_node.cpp
urdf/: ur5.urdf
