<?xml version="1.0"?>
<package format="2">
  <name>ur5_tasks</name>
  <version>0.0.0</version>
  <description>The ur5_tasks package</description>

  <maintainer email="eslamsalahelsheikh@gmail.com">Eslam Elshiekh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>moveit_kinematics</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>kdl_parser</exec_depend>

</package>